<resources>
    <string name="app_name">OBSS Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_poster">image poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="section_title">Section Title</string>
    <string name="onboarding_title_1">Discover Movies</string>
    <string name="onboarding_title_2">Save Your Favorites</string>
    <string name="onboarding_title_3">Search Instantly</string>
    <string name="onboarding_description_1">Browse popular and trending titles easily.</string>
    <string name="onboarding_description_2">Keep track of the movies you love.</string>
    <string name="onboarding_description_3">Find any movie in seconds.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next\n</string>
    <string name="see_all">See all</string>

    <string name="section_popular">Popular Movies</string>
    <string name="section_now_playing">Now Playing</string>
    <string name="section_top_rated">Top Rated</string>
    <string name="section_upcoming">Upcoming Movies</string>
    <string name="Search">Search...</string>
    <string name="cancel">cancel\n</string>
    <string name="emptylist">Sorry, no results matching were found.\nPlease try a different title.</string>
    <string name="title_back_to_home">Go back home</string>
    <string name="search_results">Search Results</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="or_login_with">Or login with</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register_success"> Registration successful!</string>
    <string name="email_already_exists">This email is already registered. Please use a different email or login.</string>
    <string name="login_error_fields_empty">Please fill in all fields</string>
    <string name="register_error_fields_empty">Please fill in all fields</string>
    <string name="default_web_client_id">32450197300-dseip1mkp2mbl2jvk8lgadbt9mit39go.apps.googleusercontent.com</string>
    <string name="actions">Actions</string>
    <string name="share">Share</string>
    <string name="section_cast">Cast</string>
    <string name="section_videos">Videos</string>
    <string name="section_similar_movies">Similar Movies</string>

    <string name="runtime_unknown">Runtime unknown</string>
    <string name="runtime_format">%1$d min</string>
    <string name="status_format">Status: %1$s</string>
    <string name="production_companies_format">Production: %1$s</string>
    <string name="info_format">Year: %1$s | Genres: %2$s</string>

    <string name="action_add_to_watch_later">Add to Watch Later</string>
    <string name="action_add_to_watched">Add to Watched</string>
    <string name="share_chooser_title">Share</string>
    <string name="share_text_format">%1$s - Check out more info in the app!</string>

    <string name="watch_later_toast">%1$s added to Watch Later</string>
    <string name="watched_toast">%1$s added to Watched</string>
    <string name="rating_format">TMDB: %1$s / 10</string>
    <string name="logout">Logout</string>
    <string name="library">Library</string>
    <string name="go_to_library">Go to Library</string>
    <string name="watch_later_removed_toast">%1$s removed from Watch Later</string>
    <string name="watched_removed_toast">%1$s removed from Watched</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="watch_later_movies">Watch Later Movies</string>
    <string name="no_watched_movies">You have no watched movies yet.</string>
    <string name="no_watch_later_movies">You have no movies in your Watch Later list.</string>
    <string name="watch">Watch</string>
    <string name="watch_later">Watch Later</string>
    <string name="watched">Watched\n</string>
    <string name="an_error_occured">An Error Occured</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_required_message">You need to log in to access your library. Please sign in to continue.</string>
    <string name="no_movies_added">No Movies Added</string>

</resources>